Fix error of product name displayed overflowing to another column

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -660,6 +660,14 @@ a {
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
 }
+.product-list-title {
+  margin: auto;
+  overflow: hidden;
+  display: block;
+  max-width: 300px;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+}
 .product-card {
   cursor: pointer;
   border: none;
